Harden auth flows and stabilize frontend pages